[gd_scene load_steps=15 format=1]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://HUDLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://gem1.png" type="Texture" id=4]
[ext_resource path="res://bazaar.png" type="Texture" id=5]
[ext_resource path="res://ThirdScene.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 110.851 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 96.4969 )

[node name="ThirdScene" type="Node2D"]

script/script = ExtResource( 1 )

[node name="HUDLayer" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Gem1" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 167, 122 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Sprite" type="Sprite" parent="Gem1"]

texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem1"]

transform/scale = Vector2( 3, 3 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Button1" type="Button" parent="Gem1"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -67.0
margin/top = -82.0
margin/right = -15.0
margin/bottom = -36.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="Area2D_1" type="Area2D" parent="Gem1"]

transform/scale = Vector2( 2, 2 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Trade" type="Label" parent="Gem1/Area2D_1"]

visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = -33.0
margin/right = 66.0
margin/bottom = -19.0
text = "Trade it!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem1/Area2D_1"]

transform/scale = Vector2( 3, 3 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Gem2" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 869.806, 231.579 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Sprite1" type="Sprite" parent="Gem2"]

texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem2"]

transform/scale = Vector2( 3, 3 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Gem3" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 407.756, 487.535 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Sprite2" type="Sprite" parent="Gem3"]

texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem3"]

transform/scale = Vector2( 3, 3 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Button3" type="Button" parent="Gem3"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -59.0
margin/top = -81.0
margin/right = -7.0
margin/bottom = -35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="Area2D_3" type="Area2D" parent="Gem3"]

transform/scale = Vector2( 2, 2 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Trade" type="Label" parent="Gem3/Area2D_3"]

visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = -31.0
margin/right = 59.0
margin/bottom = -17.0
text = "Trade it!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem3/Area2D_3"]

transform/scale = Vector2( 3, 3 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Gem4" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 1046.03, 629.829 )
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 3, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="Sprite3" type="Sprite" parent="Gem4"]

texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gem4"]

transform/scale = Vector2( 3, 3 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

visibility/opacity = 0.75
transform/pos = Vector2( 568.637, 316.967 )
z/z = -1
texture = ExtResource( 6 )

[node name="ToSecondScene" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 80.0425, 471.837 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToSecondScene"]

shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="ToFirstScene" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1060.11, 141.876 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToFirstScene"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Gem1/Area2D_1" to="." method="_on_Area2D_1_body_enter"]

[connection signal="body_exit" from="Gem1/Area2D_1" to="." method="_on_Area2D_1_body_exit"]

[connection signal="body_enter" from="Gem3/Area2D_3" to="." method="_on_Area2D_3_body_enter"]

[connection signal="body_exit" from="Gem3/Area2D_3" to="." method="_on_Area2D_3_body_exit"]

[connection signal="body_enter" from="ToSecondScene" to="." method="_on_ToSecondScene_body_enter"]

[connection signal="body_enter" from="ToFirstScene" to="." method="_on_ToFirstScene_body_enter"]


