[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://sounds/noiseofbazaar2.ogg" type="AudioStream" id=2]
[ext_resource path="res://img/SecondScene.png" type="Texture" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUDLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/bazaar.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Merchant.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 133.719, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 97.8393 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 572.347, 10 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 313.716, 10 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 552.81, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 316.192, 10 )

[node name="SecondScene" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Noise" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Sprite" type="Sprite" parent="."]

visibility/opacity = 0.75
transform/pos = Vector2( 600, 300 )
z/z = -4096
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 213.257, 331.763 )

[node name="HUDLayer" parent="." instance=ExtResource( 5 )]

editor/display_folded = true

[node name="TabContainer" parent="HUDLayer" instance=ExtResource( 6 )]

visibility/visible = false

[node name="ToFirstScene" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 253.201, 18.0416 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToFirstScene"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ToThirdScene" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1090, 473.432 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToThirdScene"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Merchant1" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 266.028, 174.548 )

[node name="Merchant2" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 726.508, 78.9778 )

[node name="Merchant3" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 433.078, 469.4 )

[node name="Merchant0" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 918.036, 468.172 )

[node name="Walls" type="StaticBody2D" parent="."]

transform/pos = Vector2( 600, 300 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -6.40338, -316.192 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, -494.483, -3.08527 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 5 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -1.7674, 284.303 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 6 )
shapes/3/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 515.509, -3.31702 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Wall1" type="CollisionShape2D" parent="Walls"]

transform/pos = Vector2( -6.40338, -316.192 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Wall2" type="CollisionShape2D" parent="Walls"]

transform/pos = Vector2( -494.483, -3.08527 )
transform/rot = 90.0
shape = SubResource( 4 )
trigger = false
_update_shape_index = 1

[node name="Wall3" type="CollisionShape2D" parent="Walls"]

transform/pos = Vector2( -1.7674, 284.303 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 2

[node name="Wall4" type="CollisionShape2D" parent="Walls"]

transform/pos = Vector2( 515.509, -3.31702 )
transform/rot = 90.0
shape = SubResource( 6 )
trigger = false
_update_shape_index = 3

[connection signal="body_enter" from="ToFirstScene" to="." method="_on_ToFirstScene_body_enter"]

[connection signal="body_enter" from="ToThirdScene" to="." method="_on_ToThirdScene_body_enter"]


